mc_code/err.txt
g++ -Wall -g   -c -o system.o system.cpp
system.cpp:20:1: error: prototype for 'System::System(double, double, double, double, double, double, int, std::vector<Channel>, OpticalPotential, NonLocalOpticalPotential, int, double, double, boost::numeric::ublas::matrix<CouplingPotential>&)' does not match any in class 'System'
 System::System(const double a_size, double e,
 ^
In file included from system.cpp:4:0:
system.h:18:7: error: candidates are: System::System(const System&)
 class System{
       ^
system.h:58:5: error:                 System::System(double, double, double, double, double, double, int, std::vector<Channel>, OpticalPotential, NonLocalOpticalPotential, int, double, double, boost::numeric::ublas::matrix<CouplingPotential>)
     System(const double a_size, double e,
     ^
system.h:52:5: error:                 System::System()
     System(); //explicitly disallow default constructor
     ^
<builtin>: recipe for target 'system.o' failed
make: *** [system.o] Error 1
